// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffSelection renders a trace as expected 1`] = `
<div
  className="DiffSelection is-non-empty ub-mb3"
>
  <div
    className="DiffSelection--selectedItems"
  >
    <ResultItemTitle
      disableComparision={false}
      duration={0}
      durationPercent={0}
      error={[Error: error-0]}
      isInDiffCohort={true}
      key="trace-id-0"
      linkTo="/trace/trace-id-0"
      state={
        Object {
          "stateKey": "stateValue0",
        }
      }
      targetBlank={true}
      toggleComparison={[Function]}
      traceID="trace-id-0"
      traceName="trace-name-0"
    />
  </div>
  <div
    className="DiffSelection--message"
  >
    <React.Fragment>
      <Button
        block={false}
        className="ub-right"
        disabled={true}
        ghost={false}
        loading={false}
        prefixCls="ant-btn"
        type="primary"
      >
        Compare Traces
      </Button>
      <h2
        className="ub-m0"
      >
        1
         Selected for comparison
      </h2>
    </React.Fragment>
  </div>
</div>
`;

exports[`DiffSelection renders multiple traces as expected 1`] = `
<div
  className="DiffSelection is-non-empty ub-mb3"
>
  <div
    className="DiffSelection--selectedItems"
  >
    <ResultItemTitle
      disableComparision={false}
      duration={0}
      durationPercent={0}
      error={[Error: error-0]}
      isInDiffCohort={true}
      key="trace-id-0"
      linkTo="/trace/trace-id-0"
      state={
        Object {
          "stateKey": "stateValue0",
        }
      }
      targetBlank={true}
      toggleComparison={[Function]}
      traceID="trace-id-0"
      traceName="trace-name-0"
    />
    <ResultItemTitle
      disableComparision={false}
      durationPercent={0}
      error={[Error: error-1]}
      isInDiffCohort={true}
      key="trace-id-1"
      linkTo="/trace/trace-id-1"
      state={
        Object {
          "stateKey": "stateValue1",
        }
      }
      targetBlank={true}
      toggleComparison={[Function]}
      traceID="trace-id-1"
    />
  </div>
  <div
    className="DiffSelection--message"
  >
    <React.Fragment>
      <Link
        replace={false}
        to="/trace/trace-id-0...trace-id-1?cohort=trace-id-0&cohort=trace-id-1"
      >
        <Button
          block={false}
          className="ub-right"
          disabled={false}
          ghost={false}
          loading={false}
          prefixCls="ant-btn"
          type="primary"
        >
          Compare Traces
        </Button>
      </Link>
      <h2
        className="ub-m0"
      >
        2
         Selected for comparison
      </h2>
    </React.Fragment>
  </div>
</div>
`;
